2025-09-06  Zhengyi Fu  <i@fuzy.me>

	* AGENTS.md: Tell the agent to start a new record if necessary.

2025-09-06  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el: Fix window restoration in
	+gptel-edit-file-async and improve comint integration.
	(+gptel-edit-file-async): Use window-main-window instead of
	frame-root-window for better compatibility.
	(run_command): Add comint-highlight-prompt face to command prompt
	and add command to input history.
	(gptel-agent): Replace manual guideline collection with
	gptel-agent--setup-context function that uses gptel-add-file
	to include AGENTS.md in the context.

2025-09-06  Zhengyi Fu  <i@fuzy.me>

	* packages.el: Add editorconfig and jsonrpc as built-in packages.

2025-09-06  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el: Add with-editor require statement.
	Ensure with-editor is properly loaded before using it in the
	run_command tool implementation.

2025-09-06  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el: Improve run_command tool output
	formatting.
	(run_command): Insert separator and display command before
	output to improve readability when multiple commands are run.

2025-09-06  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el: Add project-specific todo list management
	tools for gptel agents and update kimi-agent preset.
	(+gptel-get-project-todo-file): Get project-specific todo file path
	in .cache directory.
	(+gptel-ensure-todo-directory): Ensure .cache directory exists.
	(+gptel-read-todo-file): Read todos from project-specific file.
	(+gptel-add-todo-item): Add new todo item with metadata.
	(+gptel-mark-todo-done): Mark todo as DONE.
	(+gptel-search-todos): Search todos by pattern.
	(+gptel-list-active-todos): List active TODO items.
	(read_todos, add_todo, complete_todo, search_todos,
	list_active_todos): gptel tool definitions.
	(kimi-agent): Add todo management tools to toolset and update
	system message with todo list maintenance instructions for
	multi-step tasks.
